...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Arbeit suchen" translatesAutoresizingMaskIntoConstraints="NO" id="IgP-iu-H4D">
                                <rect key="frame" x="0.0" y="8" width="375" height="44"/>
                                <color key="tintColor" red="0.67843137249999996" green="0.078431372550000003" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <segments>
                                    <segment title="Name"/>
                                    <segment title="Status (ha)"/>
                                </segments>
                                <color key="tintColor" red="0.67843137249999996" green="0.078431372550000003" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Weingut" id="6Do-bd-K9f">
                        <barButtonItem key="rightBarButtonItem" image="add" id="HZG-Ao-aZG">
                            <connections>
                                <segue destination="Y79-b3-EVI" kind="show" id="xPR-iu-d86"/>
...
                                        <rect key="frame" x="193.5" y="0.0" width="173.5" height="121.5"/>
                                        <subviews>
                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="z.B. 15.03.2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Luj-So-dVz">
                                                <rect key="frame" x="0.0" y="0.0" width="173.5" height="20.5"/>
                                                <gestureRecognizers/>
...
                                                </connections>
                                            </label>
                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="z.B. 25.04.2017" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CQ3-HV-3nr">
                                                <rect key="frame" x="0.0" y="50.5" width="173.5" height="20.5"/>
                                                <gestureRecognizers/>
...
                                                <rect key="frame" x="0.0" y="101" width="173.5" height="20.5"/>
                                                <subviews>
                                                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="z.B. 2:30" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K64-09-w9D">
                                                        <rect key="frame" x="0.0" y="0.0" width="87" height="20.5"/>
                                                        <gestureRecognizers/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cqM-aR-Mah" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Arbeiten" image="operations" id="ah8-Wg-2YO"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="65y-Og-0eP">
...
