...
                        <viewControllerLayoutGuide type="bottom" id="Bm4-T2-ijm"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bO-oY-qeh">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Feld suchen" translatesAutoresizingMaskIntoConstraints="NO" id="g7j-ix-T3m">
                                <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="CVD-Y9-qJe" id="5Ji-hB-gHc"/>
                                </connections>
                            </searchBar>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="V7b-VM-7zj" customClass="UISortSegmentedControl" customModule="Weinberg" customModuleProvider="target">
                                <rect key="frame" x="8" y="124" width="359" height="29"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <segments>
                                    <segment title="Name"/>
                                    <segment title="Fläche (m²)"/>
                                </segments>
                                <color key="tintColor" red="0.67843137249999996" green="0.078431372550000003" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
                                <connections>
                                    <action selector="sortFields:" destination="CVD-Y9-qJe" eventType="valueChanged" id="Oup-iv-84r"/>
                                </connections>
                            </segmentedControl>
...
                            <barButtonItem image="add" id="zan-bI-egZ">
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <action selector="createNewField:" destination="CVD-Y9-qJe" id="QZS-Wa-f3p"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem image="renew" id="zkz-1I-JNh">
                                <connections>
                                    <action selector="renewOperation:" destination="CVD-Y9-qJe" id="V8z-Dw-9Hi"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
...
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="PAR-4N-Aqd">
                                        <rect key="frame" x="193.5" y="2.5" width="173.5" height="117"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Normalerziehung" textAlignment="natural" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="JVg-VS-3zZ">
                                                <rect key="frame" x="0.0" y="0.0" width="115" height="19"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <connections>
                                                    <outlet property="delegate" destination="Id6-Hb-XnV" id="dlg-Lq-otK"/>
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Riesling" textAlignment="natural" minimumFontSize="17" clearButtonMode="unlessEditing" translatesAutoresizingMaskIntoConstraints="NO" id="nct-OY-6m6">
                                                <rect key="frame" x="0.0" y="49" width="54.5" height="19"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <connections>
                                                    <outlet property="delegate" destination="Id6-Hb-XnV" id="2Fu-JZ-1Gx"/>
...
            <point key="canvasLocation" x="2049" y="104"/>
        </scene>
        <!--Felder-->
        <scene sceneID="AKY-b2-Y7l">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Vpo-Xu-c1V" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Felder" image="fields" id="ULq-eK-KJb"/>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="g09-Qt-qIX">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
