...
        
        fields = realm.objects(Field.self).sorted(byKeyPath: "name", ascending: true)
        tableDelegate = FieldsVCRTableViewDelegate(fields: fields!, navbarController: self.navigationController!, tabbarController: self.tabBarController!)
        fieldTable.delegate = tableDelegate
        fieldTable.dataSource = tableDelegate
        
        navigationController?.navigationBar.accessibilityIdentifier = "FieldNavigationItemID"
    }

    /*
     *This seque closes the Edit/AddFieldViewController
     */
    @IBAction func unwindToField(segue:UIStoryboardSegue) {}
...
    
    /*
     *Set all fields unckecked and updates the date in the database.
     */
    @IBAction func renewOperation(_ sender: UIBarButtonItem) {
        if (DataManager.shared.currentOperation != nil && (DataManager.shared.currentOperation?.done.count)!>0) {
            let alert = UIAlertController(title: "Zurücksetzen", message: "Wollen Sie wirklich den gesamten Arbeitsschritt zurücksetzen?", preferredStyle: .alert)
            self.present(alert, animated: true, completion: nil)
            alert.addAction(UIAlertAction(title: "Abbrechen", style: .cancel, handler: nil))
            alert.addAction(UIAlertAction(title: "Zurücksetzen", style: .default, handler:{(_) in
                try! self.realm.write {
                    let operation = DataManager.shared.currentOperation
                    for doneField in (operation?.done)! {
...
